src/test/deca/codegen/valid/logic/if-not.deca
//Test valide de not.

{
    boolean b = false;
    if(!b){
        println("ok");
    }
}