src/test/deca/codegen/invalid/no-compile/not.deca
//Test invalide de not.
//erreur ligne 5

{
    if(!6){
        println("pas boolean!!");
    }
}